--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,20 @@
 .carousel img {
   padding-inline: 1px;
 }
+@keyframes ingrandisci {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+
+.carousel img:hover {
+  -webkit-animation: ingrandisci 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: ingrandisci 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
 .carousel div {
   padding: 0;
 }
