--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,11 @@ footer a {
   text-decoration: none;
   color: inherit !important;
 }
+footer {
+  font-size: 0.7rem;
+}
 footer ul {
   list-style: none;
-  font-size: 0.7em;
   li {
     margin: 0.4rem 0;
   }
